--- a/{{cookiecutter.repo_name}}/MANIFEST.in
+++ b/{{cookiecutter.repo_name}}/MANIFEST.in
@@ -1,8 +1,6 @@
-include AUTHORS.rst
-include CONTRIBUTING.rst
-include HISTORY.rst
-include LICENSE
 include README.rst
+include CHANGES.rst
+include LICENSE.txt
 
 recursive-include tests *
 recursive-exclude * __pycache__
